body overflow fix :rocket:

--- a/public/styles.css
+++ b/public/styles.css
@@ -28,6 +28,7 @@ body {
 	background-position: center;
 	bottom: 0;
 	background-repeat: no-repeat;
+	overflow: hidden;
 }
 
 .header__content-container {
@@ -72,7 +73,7 @@ header h1 {
 
 .main-wrap {
 	overflow-y: scroll;
-	max-height: calc(100vh - 122px);
+	max-height: calc(100vh - 120px);
 }
 
 .note-container {
